# food-stock

./: README.md
food_stock_backend/: .env_default  build_env.sh  manage.py  pyproject.toml  setup.py
food_stock_backend/food_stock/: asgi.py  settings.py  urls.py  wsgi.py
food_stock_backend/stock_api/: admin.py  apps.py  constants.py  models.py  urls.py
food_stock_backend/stock_api/controllers/: product_controller.py  user_controller.py
food_stock_backend/stock_api/db_models/: product.py  user_model.py
food_stock_backend/stock_api/entities/: product_entity_api.py
food_stock_backend/stock_api/exceptions/: product_exceptions.py
food_stock_backend/stock_api/migrations/: 0001_initial.py  0002_product_user_notification_list.py  0003_alter_product_expiration_date_and_more.py  0004_alter_product_expiration_date.py
food_stock_backend/stock_api/serializers/: product_serializer.py  user_serializer.py
food_stock_backend/stock_api/thrid_api/: product_api.py  produts_api_interface.py
food_stock_frontend/stock_app/: pubspec.yaml
food_stock_frontend/stock_app/android/app/: build.gradle
food_stock_frontend/stock_app/ios/Runner.xcodeproj/: project.pbxproj
food_stock_frontend/stock_app/lib/: main.dart
food_stock_frontend/stock_app/lib/models/: product_model.dart
food_stock_frontend/stock_app/lib/repository/: product_repository.dart
food_stock_frontend/stock_app/lib/service/: product_service.dart
food_stock_frontend/stock_app/linux/: CMakeLists.txt
food_stock_frontend/stock_app/web/: index.html
food_stock_frontend/stock_app/windows/: CMakeLists.txt
(+11 files in other folders)
